parser/src/test/resources/corpus/valid/36_when_then_else.ff
rule "When Then Else" {
  when fee > USD 0
    then post fee to ledger account "Performance Fee"
    else publish skipped
}
