parser/src/test/resources/corpus/invalid/32_post_narrative_no_string.ff
rule "Narrative No String" {
  post fee to ledger account "Mgmt Fee" with narrative
}
